[tool.poetry]
name = "pyramid-tutorial"
version = "0.1.0"
description = ""
authors = ["2lu3 <hi2lu3@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pyramid_tutorial"}]

[tool.poetry.dependencies]
python = ">=3.8,<4"
pyramid = "^2.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
